--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vite-plugin-mkcert": "^1.17.6"
   },
   "dependencies": {
-    "mp4box": "^0.5.3"
+    "mp4box": "^0.5.3",
+    "plotly.js": "1.47.4",
+    "plotly.js-dist-min": "^2.35.2"
   }
 }
