--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^22.9.3",
+    "@webgpu/types": "^0.1.51",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
     "vite-plugin-mkcert": "^1.17.6"
