--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "moduleDetection": "force",
     "noEmit": true,
 
-    "types": ["vite/client"],
+    "types": ["vite/client", "@webgpu/types"],
 
     /* Linting */
     "strict": true,
